RAG_Classic_Single-Pass.ipynb: Created LangChain Documents and Chunking

--- a/RAG_Classic_Single-Pass.ipynb
+++ b/RAG_Classic_Single-Pass.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3eed0d50",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "fb1d8dcd",
    "metadata": {},
    "outputs": [
@@ -45,12 +45,12 @@
    "id": "8da39f17",
    "metadata": {},
    "source": [
-    "# 1. Data Source"
+    "# 1. Data Source "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "8ec915c3",
    "metadata": {},
    "outputs": [],
@@ -65,8 +65,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "484d9e65",
+   "metadata": {},
+   "source": [
+    "# 2. Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "e9b00f17",
    "metadata": {},
    "outputs": [],
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "46762dab",
    "metadata": {},
    "outputs": [],
@@ -94,9 +102,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e1ab3fc",
+   "metadata": {},
+   "source": [
+    "# 3) Create LangChain Documents + chunking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "24f63a6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_core.documents import Document\n",
+    "\n",
+    "splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 0)\n",
+    "\n",
+    "documents = [\n",
+    "    Document(page_content = txt, metadata = {\"source\": filename})\n",
+    "    for filename, txt in all_txt.items()\n",
+    "    if isinstance(txt, str) and txt.strip()\n",
+    "]\n",
+    "\n",
+    "split_docs = splitter.split_documents(documents) # This preserves metadata"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccfdcb55",
+   "id": "dd315696",
    "metadata": {},
    "outputs": [],
    "source": []
